ecommerce-microservices/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-microservices
  labels:
    name: ecommerce-microservices
    app: ecommerce-backend
